Updated FPN to catergory shifts
