# src/Swagger/apis/ShiftApi.ts
@@ -1,0 +1,62 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Shift
+ * Shift Server API documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import {
+    IndividualShiftResponse,
+    IndividualShiftResponseFromJSON,
+    IndividualShiftResponseToJSON,
+} from '../models';
+
+export interface IndivdualShiftRequest {
+    uuid: string;
+}
+
+/**
+ * 
+ */
+export class ShiftApi extends runtime.BaseAPI {
+
+    /**
+     * The queried shift
+     */
+    async indivdualShiftRaw(requestParameters: IndivdualShiftRequest): Promise<runtime.ApiResponse<IndividualShiftResponse>> {
+        if (requestParameters.uuid === null || requestParameters.uuid === undefined) {
+            throw new runtime.RequiredError('uuid','Required parameter requestParameters.uuid was null or undefined when calling indivdualShift.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/api/shift/{uuid}`.replace(`{${"uuid"}}`, encodeURIComponent(String(requestParameters.uuid))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        });
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => IndividualShiftResponseFromJSON(jsonValue));
+    }
+
+    /**
+     * The queried shift
+     */
+    async indivdualShift(requestParameters: IndivdualShiftRequest): Promise<IndividualShiftResponse> {
+        const response = await this.indivdualShiftRaw(requestParameters);
+        return await response.value();
+    }
+
+}
