# src/Swagger/models/IndividualShiftResponse.ts
@@ -1,0 +1,64 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Shift
+ * Shift Server API documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    Shift,
+    ShiftFromJSON,
+    ShiftFromJSONTyped,
+    ShiftToJSON,
+} from './';
+
+/**
+ * 
+ * @export
+ * @interface IndividualShiftResponse
+ */
+export interface IndividualShiftResponse {
+    /**
+     * 
+     * @type {Shift}
+     * @memberof IndividualShiftResponse
+     */
+    shift?: Shift;
+}
+
+export function IndividualShiftResponseFromJSON(json: any): IndividualShiftResponse {
+    return IndividualShiftResponseFromJSONTyped(json, false);
+}
+
+export function IndividualShiftResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): IndividualShiftResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'shift': !exists(json, 'shift') ? undefined : ShiftFromJSON(json['shift']),
+    };
+}
+
+export function IndividualShiftResponseToJSON(value?: IndividualShiftResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'shift': ShiftToJSON(value.shift),
+    };
+}
+
+
